h1 vertical alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
 
 h1 {
   font-size: 26px;
+  margin-bottom: 0rem;
 }
 
 .boldText {
